[package]
name = "odin"
version = "1.4.0"
authors = ["mbround18"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
which = "4.0.2"
serde = { version = "1.0", features = ["derive"], default_features = false  }
sysinfo = { version = "0.16.1", default_features = false }
serde_json = "1.0"
daemonize = "0.4"
tar = "0.4"
flate2 = "1.0"
inflections = "1.1.1"
reqwest = { version = "0.11.1", features = ["blocking", "json"] }
chrono = "0.4"
md5 = "0.7.0"
zip = { version = "0.5" }
fs_extra = "1.2.0"
glob = "0.3.0"


[dev-dependencies]
once_cell = "1.7"
rand = "0.8.3"
serial_test = "0.5.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]

[profile.dev]
opt-level = 0


[profile.release]
opt-level = 3
