[workspace]
members = [
  "src/odin",
  "src/huginn",
 "src/shared",
]
resolver = "2"
package.edition = "2024"
package.repository = "https://github.com/mbround18/valheim-docker"

[workspace.dependencies]
odin = { path = "src/odin" }
shared = { path = "src/shared" }

[workspace.lints.rust]
unsafe_code = "forbid"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

