[package]
name = "odin-http-server"
version = "0.1.0"
authors = ["mbround18"]
edition = "2018"

[[bin]]
name = "odin-http-server"
path = "main.rs"

[dependencies]
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3" }

[dependencies.odin]
path = "../odin"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["run-for-all",	"precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]


