[package]
name = "huginn"
version = "1.0.0"
authors = ["mbround18"]
edition = "2018"
license = "BSD-3-Clause License"
description = "Valheim Http Assistant"
readme = "README.md"
homepage = "https://github.com/mbround18/valheim-docker"
repository = "https://github.com/mbround18/valheim-docker"
include = [
  "**/*.rs",
  "**/*.yaml",
  "Cargo.toml",
]

[[bin]]
name = "huginn"
path = "main.rs"

[dependencies]
log = "0.4"
rocket = "0.5.0-rc.1"
serde = { version = "1.0", features = ["derive"], default_features = false  }
serde_json = "1"

[dependencies.odin]
path = "../odin"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["run-for-all",	"precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]


