[package]
name = "huginn"
version = "0.1.1"
authors = ["mbround18"]
edition = "2021"
license = "BSD-3-Clause License"
description = "Valheim http status"
readme = "README.md"
homepage = "https://github.com/mbround18/valheim-docker"
repository = "https://github.com/mbround18/valheim-docker"
include = [
  "**/*.rs",
  "**/*.yaml",
  "Cargo.toml",
]

[[bin]]
name = "huginn"
path = "main.rs"

[build-dependencies]
cc = "1"

[dependencies]
log = "0.4.25"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3.7" }

[dependencies.odin]
workspace = true

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["run-for-all",	"precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]


