[package]
name = "odin"
version = "2.1.0"
authors = ["mbround18"]
edition = "2021"
license = "BSD-3-Clause License"
description = "Valheim server manager"
readme = "README.md"
homepage = "https://github.com/mbround18/valheim-docker"
repository = "https://github.com/mbround18/valheim-docker"
keywords = ["cli", "valheim", "gameserver"]
categories = ["command-line-utilities"]
include = [
  "**/*.rs",
  "**/*.yaml",
  "Cargo.toml",
]


[[bin]]
name = "odin"
path = "main.rs"

[lib]
name = "odin"
path = "lib.rs"

[build-dependencies]
cc = "1.2.35"

[dependencies]
handlebars = "6.3.2"
dotenv = "0.15.0"
log = "0.4.27"
clap = { version = "4.5.46", features = [ "derive", "env" ] }
which = "8.0.0"
serde = { version = "1.0.219", features = ["derive"], default-features = false  }
sysinfo = { version = "0.37.0" }
serde_json = "1.0.143"
daemonize = "0.5.0"
tar = "0.4.44"
flate2 = "1.1.2"
inflections = "1.1.1"
md5 = "0.8.0"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
chrono = "0.4.41"
zip = { version = "5.0.0" }
fs_extra = "1.3.0"
glob = "0.3.3"
a2s = "0.6.1"
serde_with = "3.14.0"
regex = "1.11.2"
tokio = { version = "1.47.1", features = ["full"] }
notify = "8.2.0"
json-patch = "4.0.0"
cached = "0.56.0"
anyhow = "1.0.99"
thiserror = "2.0.16"
tempfile = "3.21.0"
walkdir = "2.5.0"
sha2 = "0.10.9"
semver = "1.0.26"

[dependencies.shared]
workspace = true

[dev-dependencies]
once_cell = "1.21.3"
rand = "0.9.2"
serial_test = "3.2.0"
mockito = "1.7.0"
lazy_static = "1.5.0"
test-case = "3.3.1"
mockall = "0.13.1"



[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["run-for-all",	"precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]
