[package]
name = "odin"
version = "2.1.0"
authors = ["mbround18"]
edition = "2021"
license = "BSD-3-Clause License"
description = "Valheim server manager"
readme = "README.md"
homepage = "https://github.com/mbround18/valheim-docker"
repository = "https://github.com/mbround18/valheim-docker"
keywords = ["cli", "valheim", "gameserver"]
categories = ["command-line-utilities"]
include = ["**/*.rs", "**/*.yaml", "Cargo.toml"]


[[bin]]
name = "odin"
path = "main.rs"

[lib]
name = "odin"
path = "lib.rs"

[build-dependencies]
cc = "1.2.56"

[dependencies]
handlebars = "6.4.0"
dotenv = "0.15.0"
log = "0.4.29"
clap = { version = "4.5.58", features = ["derive", "env"] }
which = "8.0.0"
serde = { version = "1.0.228", features = ["derive"], default-features = false }
sysinfo = { version = "0.38.2" }
serde_json = "1.0.149"
daemonize = "0.5.0"
tar = "0.4.44"
flate2 = "1.1.9"
inflections = "1.1.1"
md5 = "0.8.0"
reqwest = { version = "0.13.2", default-features = false, features = [
  "blocking",
  "json",
  "native-tls",
] }
chrono = "0.4.43"
zip = { version = "8.0.0" }
fs_extra = "1.3.0"
glob = "0.3.3"
a2s = "0.6.1"
serde_with = "3.16.1"
regex = "1.12.3"
tokio = { version = "1.49.0", features = ["full"] }
notify = "8.2.0"
json-patch = "4.1.0"
cached = "0.56.0"
anyhow = "1.0.101"
thiserror = "2.0.18"
tempfile = "3.25.0"
walkdir = "2.5.0"
sha2 = "0.10.9"
semver = "1.0.27"

[dependencies.shared]
workspace = true

[dev-dependencies]
once_cell = "1.21.3"
rand = "0.10.0"
serial_test = "3.3.1"
mockito = "1.7.2"
lazy_static = "1.5.0"
test-case = "3.3.1"
mockall = "0.14.0"


[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = [
  "run-for-all",
  "precommit-hook",
  "run-cargo-fmt",
  "run-cargo-test",
  "run-cargo-clippy",
]
