[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-log = "0.2.0"
sysinfo = { version = "0.39.0" }
nix = { version = "0.31.2", default-features = false, features = [
    "fs",
    "user",
] }
